# OmicsClaw Python deps live here.
# R packages, bioinformatics CLIs (samtools/STAR/fastqc/...), and the build
# toolchain are declared in environment.yml and installed by 0_setup_env.sh.
# See docs/superpowers/specs/2026-04-30-conda-env-management-design.md.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicsclaw"
version = "0.1.2"
description = "OmicsClaw: Multi-omics analysis platform with skills across spatial, single-cell, genomics, proteomics, metabolomics, and bulk RNA-seq domains"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OmicsClaw Team"}
]
keywords = [
    "multi-omics",
    "spatial-transcriptomics",
    "single-cell",
    "genomics",
    "proteomics",
    "metabolomics",
    "bulk-rna-seq",
    "bioinformatics",
    "scanpy",
    "squidpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11,<3.14"

# --------------------------------------------------------------------------- #
# Tier 1: Core — always installed via `pip install -e .`                      #
# After the mamba-first migration, the core deps shrank from ~25 to a         #
# handful of pip-only / pip-managed leaves. The bulk (scanpy, anndata,        #
# squidpy, numpy, pandas, scipy, scikit-learn, igraph, leidenalg, umap-learn, #
# matplotlib, seaborn, Pillow, scikit-misc, pydantic, nbformat,               #
# jupyter_client, ipykernel, greenlet, rich, etc.) lives in environment.yml   #
# Tier 4 and is installed by mamba.                                            #
# --------------------------------------------------------------------------- #
dependencies = [
    # ========== pkg_resources fallback for older packages ==========
    "setuptools>=64",

    # ========== SOCKS proxy bridge — not on conda-forge under this name ==========
    "socksio>=1.0.0",

    # ========== v2 skill contract parser (ADR 0037) — core skill-loading path ==========
    # lazy_metadata imports omicsclaw.skill.schema when a skill.yaml is present, so
    # pydantic must be in the pip core (not only environment.yml) before v2 skills
    # land in the live tree — otherwise a lightweight `pip install -e .` env silently
    # falls back to v1 / degrades v2-only skills to minimal entries.
    "pydantic>=2.1,<3",
]

[project.optional-dependencies]
# --------------------------------------------------------------------------- #
# Tier 2: spatial-domains — adds deep learning spatial domain methods.        #
# Isolated because SpaGCN depends on louvain (macOS/Clang compilation issues).#
# On install failure, skills/spatial-domains falls back to Leiden clustering. #
# --------------------------------------------------------------------------- #
spatial-domains = [
    "SpaGCN>=1.2.5,<2.0",
    # torch moved to environment.yml Tier 4
    "torch_geometric",                # STAGATE dependency
    "GraphST>=1.1.0",                 # GraphST method
    # POT moved to environment.yml Tier 4
    "cellcharter>=0.2.0",             # CellCharter method
]

# --------------------------------------------------------------------------- #
# Tier 3: Modular Domain Dependencies                                         #
# Breakdowns for specific domains, preventing installation of unused packages.#
# Most of the spatial stack (scvi-tools, cellrank, harmonypy, bbknn,          #
# scanorama, scvelo, gseapy, pydeseq2, palantir, pot, esda, libpysal,         #
# pysal) is now in environment.yml Tier 4. This extra retains only            #
# the conda-residue packages — those without a bioconda/conda-forge           #
# recipe at the time of the Task 0 audit.                                     #
# --------------------------------------------------------------------------- #
spatial = [
    # torch, scvi-tools moved to environment.yml Tier 4
    "GraphST>=1.1.0",                 # spatial-domains: GraphST method
    "torch_geometric",                # spatial-domains: STAGATE dependency
    "cellcharter>=0.2.0",             # spatial-domains: CellCharter method
    "tangram-sc>=1.0.0",              # spatial-annotate: Tangram method
    "cell2location>=0.1.5,<0.2",      # spatial-deconv: Cell2Location method — `unknown`, re-audit
    "flashdeconv>=0.1.0",             # spatial-deconv: FlashDeconv method
    # scvelo moved to environment.yml Tier 4
    # liana moved to environment.yml Tier 4 (bioconda 1.7.1, parity with PyPI)
    "cellphonedb>=5.0.0,<6.0",        # spatial-communication: CellPhoneDB — confirmed pip-only (404 on bioconda + conda-forge)
    "fastccc>=0.1.0",                 # spatial-communication: FastCCC (requires Python >=3.11)
    # cellrank, palantir, gseapy moved to environment.yml Tier 4
    "SpatialDE>=1.1.3",               # spatial-genes: SpatialDE method — `unknown`, re-audit
    # esda, libpysal, pysal moved to environment.yml Tier 4
    "infercnvpy>=0.4.0",              # spatial-cnv: inferCNVpy — `unknown`, re-audit
    # harmonypy, bbknn, scanorama moved to environment.yml Tier 4
    # POT moved to environment.yml Tier 4
    "paste-bio>=1.0.0",               # spatial-register: PASTE
    # pydeseq2 moved to environment.yml Tier 4
]

singlecell = [
    # scrublet, doubletdetection moved to environment.yml Tier 4
    # harmonypy, bbknn, scanorama moved to environment.yml Tier 4
    # celltypist moved to environment.yml Tier 4
    # arboreto moved to environment.yml Tier 4
    # cellrank, palantir moved to environment.yml Tier 4
    "pyVIA>=0.2.4",                   # sc-pseudotime: VIA
    # pydeseq2 moved to environment.yml Tier 4
    # louvain moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# singlecell-upstream — Python-side helpers for scRNA upstream wrappers.      #
# All 4 packages (multiqc, coloredlogs, humanfriendly, kb-python) moved       #
# to environment.yml Tier 4. This extra is preserved as a stable name         #
# for backward compat — `pip install -e ".[singlecell-upstream]"` is a        #
# no-op now, but doesn't break.                                                #
# --------------------------------------------------------------------------- #
singlecell-upstream = [
    # multiqc, coloredlogs, humanfriendly, kb-python all moved to
    # environment.yml Tier 4. Extra preserved for backward compatibility.
]

# --------------------------------------------------------------------------- #
# singlecell-clustering — optional clustering/embedding backends.             #
# --------------------------------------------------------------------------- #
singlecell-clustering = [
    # python-igraph moved to environment.yml Tier 4
    # leidenalg moved to environment.yml Tier 4
    # louvain moved to environment.yml Tier 4
    "phate>=1.0.11",                  # PHATE embedding
]

# --------------------------------------------------------------------------- #
# singlecell-pseudotime — optional trajectory / fate backends.                #
# --------------------------------------------------------------------------- #
singlecell-pseudotime = [
    # cellrank, palantir moved to environment.yml Tier 4
    "pyVIA>=0.2.4",                   # VIA pseudotime
]

# --------------------------------------------------------------------------- #
# singlecell-batch — optional batch integration stacks.                       #
# --------------------------------------------------------------------------- #
singlecell-batch = [
    # harmonypy, bbknn, scanorama moved to environment.yml Tier 4
    # scvi-tools, torch moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# singlecell-doublet — optional Python doublet detection stack.               #
# R-backed doublet methods are checked at runtime instead.                    #
# --------------------------------------------------------------------------- #
singlecell-doublet = [
    # scrublet, doubletdetection moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# singlecell-annotation — optional Python annotation backends.                #
# R-backed atlas methods are checked at runtime instead.                      #
# --------------------------------------------------------------------------- #
singlecell-annotation = [
    # celltypist moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# singlecell-communication — optional Python communication backends.          #
# R-backed CellChat / NicheNet are checked at runtime instead.                #
# --------------------------------------------------------------------------- #
singlecell-communication = [
    # liana moved to environment.yml Tier 4 (bioconda 1.7.1, parity with PyPI)
    "cellphonedb>=5.0.0,<6.0",        # CellPhoneDB statistical backend — confirmed pip-only (404 on bioconda + conda-forge)
]

# --------------------------------------------------------------------------- #
# singlecell-velocity — Python-side velocity analysis stack.                  #
# External CLIs such as STAR and velocyto remain manual installs.             #
# --------------------------------------------------------------------------- #
singlecell-velocity = [
    # scvelo moved to environment.yml Tier 4
]

singlecell-enrichment = [
    # gseapy moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# singlecell-full — convenience meta-extra for broader scRNA work.            #
# Still excludes external CLIs and reference downloads.                       #
# --------------------------------------------------------------------------- #
singlecell-full = [
    "omicsclaw[singlecell,singlecell-upstream,singlecell-clustering,singlecell-pseudotime,singlecell-batch,singlecell-doublet,singlecell-annotation,singlecell-communication,singlecell-velocity,singlecell-enrichment]",
]

# Legacy rpy2 bridge — no longer required. R methods use subprocess.
singlecell-r-bridge = []

# --------------------------------------------------------------------------- #
# oauth — ccproxy-backed OAuth login for Claude Pro/Max and OpenAI Codex      #
# subscriptions. Lets users route anthropic/openai calls through a local      #
# ccproxy server instead of supplying an API key. Triggered by CLI            #
# `omicsclaw auth login claude|openai` and runtime flag `--auth-mode oauth`.  #
#                                                                             #
# KNOWN BENIGN PIP WARNING:                                                   #
#   Installing this extra alongside the `spatial-trajectory` /                #
#   `singlecell-pseudotime` extras (which depend on cellrank → pygpcca) may   #
#   print:                                                                    #
#     ERROR: pygpcca 1.0.4 requires jinja2==3.0.3, but you have jinja2 3.1.x. #
#   Root cause: ccproxy-api pulls fastapi[standard] which requires            #
#   jinja2>=3.1.5, while pygpcca 1.0.4 over-pins jinja2==3.0.3. pygpcca 1.0.4 #
#   is the latest release on PyPI (no upstream fix available) and still       #
#   functions correctly with jinja2 3.1.x in practice. The warning is pip     #
#   metadata noise — the install succeeds and both OAuth and trajectory       #
#   analysis continue to work. Safe to ignore.                                #
# --------------------------------------------------------------------------- #
oauth = [
    "ccproxy-api>=0.2.7,<0.3",
    # httpx moved to environment.yml Tier 4
]

# These three extras are placeholders for future domain-specific Python
# packages. Currently empty — domain skills run via the core stack
# (scanpy/anndata/scipy/etc., installed by environment.yml Tier 4).
genomics = []

proteomics = []

metabolomics = []

bulkrna = [
    # pydeseq2, gseapy moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# Tier 4: full — all optional analysis methods across all domains             #
# --------------------------------------------------------------------------- #
full = [
    "omicsclaw[spatial,spatial-domains,spatial-annotate,spatial-deconv,spatial-trajectory,spatial-genes,spatial-statistics,spatial-condition,spatial-velocity,spatial-cnv,spatial-enrichment,spatial-communication,spatial-integration,spatial-registration,spatial-r-bridge,singlecell,singlecell-clustering,singlecell-pseudotime,singlecell-batch,singlecell-doublet,singlecell-annotation,singlecell-communication,singlecell-enrichment,singlecell-r-bridge,genomics,proteomics,metabolomics,bulkrna]"
]

# --------------------------------------------------------------------------- #
# Standalone Layers — individually installable subsets for specific skills.    #
# Each layer is isolated to avoid pulling in the entire `spatial` tier.        #
# --------------------------------------------------------------------------- #
spatial-velocity = [
    # scvelo, scvi-tools moved to environment.yml Tier 4
]

spatial-cnv = [
    "infercnvpy>=0.4.0",             # Copy number variation inference (inferCNVpy) — `unknown`, re-audit
]

spatial-enrichment = [
    # gseapy moved to environment.yml Tier 4
]

spatial-communication = [
    # liana moved to environment.yml Tier 4 (bioconda 1.7.1, parity with PyPI)
    "cellphonedb>=5.0.0,<6.0",        # CellPhoneDB — confirmed pip-only (404 on bioconda + conda-forge)
    "fastccc>=0.1.0",                 # FastCCC (requires Python >=3.11)
]

spatial-integration = [
    # harmonypy, bbknn, scanorama moved to environment.yml Tier 4
]

spatial-registration = [
    # POT moved to environment.yml Tier 4
    "paste-bio>=1.0.0",               # PASTE spatial registration
]

spatial-annotate = [
    "tangram-sc>=1.0.0",              # Tangram cell type annotation
    # scvi-tools, torch moved to environment.yml Tier 4
]

spatial-deconv = [
    "flashdeconv>=0.1.0",            # FlashDeconv: fast CPU deconvolution
    "cell2location>=0.1.5,<0.2",     # Cell2Location: Bayesian spatial deconvolution — `unknown`, re-audit
    # scvi-tools moved to environment.yml Tier 4
    "tangram-sc>=1.0.0",             # Tangram: deep learning cell-to-spot mapping
    # torch moved to environment.yml Tier 4
]

spatial-trajectory = [
    # cellrank, palantir moved to environment.yml Tier 4
]

spatial-genes = [
    "SpatialDE>=1.1.3",              # SpatialDE spatially variable genes — `unknown`, re-audit
]

spatial-statistics = [
    # esda, libpysal, pysal moved to environment.yml Tier 4
]

spatial-condition = [
    # pydeseq2 moved to environment.yml Tier 4
]

# Legacy rpy2 bridge — no longer required. R methods use subprocess.
spatial-r-bridge = []

# --------------------------------------------------------------------------- #
# banksy — isolated because pybanksy requires numpy<2.0, which conflicts with #
# pydeseq2, scvi-tools, and other packages in the full tier.                  #
# Install in a separate environment or before installing full.                #
# --------------------------------------------------------------------------- #
banksy = [
    # pybanksy requires numpy<2.0 — incompatible with full tier (numpy>=2.0)
    # Use a dedicated environment: python3.11 -m venv .venv-banksy
    "pybanksy>=1.3.0",
]

# --------------------------------------------------------------------------- #
# Tier 4: memory — persistent bot conversation context (optional)             #
# aiosqlite, sqlalchemy, fastapi, uvicorn, cryptography, requests, openai,    #
# python-dotenv moved to environment.yml Tier 4.                              #
# --------------------------------------------------------------------------- #
memory = [
    # All 8 packages (aiosqlite, sqlalchemy, fastapi, uvicorn, cryptography,
    # requests, openai, python-dotenv) moved to environment.yml Tier 4.
    # Extra preserved for backward compatibility — no-op on pip install.
]

# --------------------------------------------------------------------------- #
# channels — authoritative Telegram and Feishu Channel SDKs                   #
# --------------------------------------------------------------------------- #
channels = [
    "python-telegram-bot>=21.0",
    "lark-oapi>=1.3.0",
]

# --------------------------------------------------------------------------- #
# desktop — OmicsClaw-App / web frontend backend dependencies                 #
# aiosqlite, sqlalchemy, fastapi, uvicorn, cryptography, requests, openai,    #
# python-dotenv, pyyaml, nbformat, jupyter_client, ipykernel moved to         #
# environment.yml Tier 4.                                                      #
# --------------------------------------------------------------------------- #
desktop = [
    # python-multipart is required by FastAPI's File / Form parsing.
    # The /notebook/files/upload endpoint in omicsclaw.surfaces.desktop.notebook.router
    # uses `File(...)`, so without this import omicsclaw.surfaces.desktop.server
    # crashes at MODULE LOAD TIME (not first request time). Caught by
    # the bundled-runtime smoke test: `python -m omicsclaw.surfaces.desktop.server
    # --help` imports the module, which imports the notebook router,
    # which decorates /files/upload, which eagerly validates that
    # multipart is installed. See OmicsClaw-App/scripts/build-backend-
    # runtime.py for the smoke test that caught this.
    "python-multipart>=0.0.9",
    # aiosqlite, sqlalchemy, fastapi, uvicorn, cryptography, requests,
    # openai, python-dotenv, pyyaml, nbformat, jupyter_client, ipykernel
    # all moved to environment.yml Tier 4.
]

# --------------------------------------------------------------------------- #
# Tier 5: dev — development and testing tools                                 #
# --------------------------------------------------------------------------- #
# --------------------------------------------------------------------------- #
# interactive — CLI/TUI interactive mode dependencies                         #
# prompt-toolkit, rich, questionary, pyyaml, aiosqlite, requests, openai      #
# moved to environment.yml Tier 4.                                            #
# --------------------------------------------------------------------------- #
interactive = [
    # prompt-toolkit, rich, questionary, pyyaml, aiosqlite, requests, openai
    # all moved to environment.yml Tier 4.
]

# --------------------------------------------------------------------------- #
# tui — Full-screen Textual TUI (optional, heavier)                           #
# --------------------------------------------------------------------------- #
tui = [
    "omicsclaw[interactive]",
    "textual>=0.80",
]

# --------------------------------------------------------------------------- #
# autonomous — controlled web-guided notebook fallback for main chat          #
# nbformat, jupyter_client, ipykernel moved to environment.yml Tier 4.        #
# --------------------------------------------------------------------------- #
autonomous = [
    "tavily-python>=0.7",
    # httpx moved to environment.yml Tier 4
    "markdownify>=0.14",
    # nbformat, jupyter_client, ipykernel moved to environment.yml Tier 4
]

# --------------------------------------------------------------------------- #
# research — Multi-agent research pipeline (deepagents + LangGraph)           #
# nbformat, jupyter_client, ipykernel moved to environment.yml Tier 4.        #
# --------------------------------------------------------------------------- #
research = [
    "deepagents>=0.4.11",
    "langchain>=1.2.12",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.4.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "tavily-python>=0.7",
    # httpx moved to environment.yml Tier 4
    "markdownify>=0.14",
    "pypdf>=3.0",
    "opendataloader-pdf>=0.5",             # High-quality PDF→Markdown (requires Java 11+)
    # Notebook execution engine (CellVoyager-inspired)
    # nbformat, jupyter_client, ipykernel moved to environment.yml Tier 4
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=22.0.0,<26.0",
    "mypy>=1.0.0,<2.0",
    "ruff>=0.1.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0,<5.0",
]

[project.urls]
Homepage = "https://github.com/OmicsClaw/OmicsClaw"
Repository = "https://github.com/OmicsClaw/OmicsClaw"

[project.scripts]
omicsclaw = "omicsclaw.surfaces.cli.launcher:main"
omicsclaw-chat = "omicsclaw.surfaces.cli:main"
oc = "omicsclaw.surfaces.cli.launcher:main"
oc-chat = "omicsclaw.surfaces.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --import-mode=importlib -m 'not slow and not eval'"
testpaths = [
    "tests",
    "skills/spatial/spatial-preprocess/tests",
    "skills/spatial/spatial-domains/tests",
    "skills/spatial/spatial-de/tests",
    "skills/spatial/spatial-genes/tests",
    "skills/spatial/spatial-statistics/tests",
    "skills/spatial/spatial-annotate/tests",
    "skills/spatial/spatial-deconv/tests",
    "skills/spatial/spatial-communication/tests",
    "skills/spatial/spatial-condition/tests",
    "skills/spatial/spatial-velocity/tests",
    "skills/spatial/spatial-trajectory/tests",
    "skills/spatial/spatial-enrichment/tests",
    "skills/spatial/spatial-cnv/tests",
    "skills/spatial/spatial-integrate/tests",
    "skills/spatial/spatial-register/tests",
    "skills/spatial/spatial-microenvironment-subset/tests",
    "skills/spatial/spatial-raw-processing/tests",
    "skills/bulkrna/bulkrna-alignment/tests",
    "skills/bulkrna/bulkrna-de/tests",
    "skills/bulkrna/bulkrna-splicing/tests",
    "skills/bulkrna/bulkrna-enrichment/tests",
    "skills/bulkrna/bulkrna-deconvolution/tests",
    "skills/bulkrna/bulkrna-coexpression/tests",
    "skills/singlecell/scrna/sc-fastq-qc/tests",
    "skills/singlecell/scrna/sc-count/tests",
    "skills/singlecell/scrna/sc-velocity-prep/tests",
]
markers = [
    "slow: tests requiring full optional deps or significant runtime (excluded by default)",
    "requires_torch: tests requiring PyTorch (SpaGCN, Cell2Location, scVI)",
    "requires_r: tests requiring R (Rscript on PATH)",
    "demo: demo-mode integration tests",
    "eval: real-LLM behavioral parity tests; run manually or via nightly cron (excluded by default)",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::UserWarning:anndata",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | output
  | sessions
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["omicsclaw", "omicsclaw.*", "skills.*._lib", "skills.*._lib.*"]
exclude = ["tests", "tests.*", "output", "sessions"]

[tool.setuptools.package-data]
omicsclaw = ["py.typed"]

# ADR 2026-05-11: Negative routing eval extracted at write-time and frozen
# as a snapshot.  The model used to extract Skip-when cases is pinned here
# so that bumping the model (which can re-extract differently) requires a
# PR with a snapshot diff humans review.  See scripts/extract_skip_when_cases.py
# and tests/test_routing_skip_when.py.
[tool.omicsclaw.eval]
skip_when_extractor_model = "claude-haiku-4-5-20251001"
skip_when_extractor_temperature = 0.0
skip_when_snapshot_schema_version = 1
